<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_status"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_status" />
        <item
            android:id="@+id/nav_love_status"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/nav_love_status" />
        <item
            android:id="@+id/nav_happy_emojis"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/nav_happy_emojis" />

        <item
            android:id="@+id/nav_love_emojis"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_love_emojis" />

        <item
            android:id="@+id/nav_angry_emojis"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_angry_emojis" />

        <item
            android:id="@+id/nav_other_emojis"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_other_emojis" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>
